--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
+    "nodemon": "^3.0.1",
     "uuid": "^9.0.1"
   }
 }
