--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-tag-input": "^6.7.3",
     "reactjs-popup": "^2.0.5",
     "sass": "^1.56.2",
+    "serve": "^14.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
