--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -4,4 +4,13 @@ jobs:
   write-to-console:
     runs-on: ubuntu-latest
     steps:
-      - run: echo 'Hello world!'
+      - name: Install SSH key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          known_hosts: ${{ secrets.SSH_HOST }}
+          if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
+      - name: Adding Known Hosts
+        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+      - name: Deploy with rsync
+        run: rsync -avz ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/root/temp
