--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,4 +12,4 @@ jobs:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
-        script: echo "Hey"
+        script: echo ${{ secrets.SSH_PRIVATE_KEY }}
