--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -29,6 +30,7 @@
     "react-star-ratings": "^2.3.0",
     "react-tag-input": "^6.7.3",
     "reactjs-popup": "^2.0.5",
+    "reactstrap": "^9.2.0",
     "sass": "^1.56.2",
     "serve": "^14.2.1",
     "web-vitals": "^1.0.1"
