--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,6 +14,7 @@ jobs:
         password: ${{ secrets.SSH_PASSWORD }}
         script: |
             cd /root/Github/movie-system
+            git config pull.rebase false
             git pull
 
             lsof -i :3000,3001 | grep LISTEN | awk '{print $2}'|xargs  -n 1 kill
