--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -16,7 +16,9 @@ jobs:
       run: ssh-keyscan -p ${{ secrets.SSH_PORT }} -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
     - name: Deploy with rsync
-      run: rsync -avz -e "ssh -p ${{ secrets.SSH_PORT }}" ../frontend/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/root/temp/
+      run: |
+        ls
+        rsync -avz -e "ssh -p ${{ secrets.SSH_PORT }}" ../frontend ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/root/temp/
 
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@v1.0.0
