--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Deploy with rsync
       run: |
         ls
-        rsync -avz -e "ssh -p ${{ secrets.SSH_PORT }}" ../frontend ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/root/temp/
+        rsync -avz -e "ssh -p ${{ secrets.SSH_PORT }}" ./ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/root/temp/
 
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@v1.0.0
