--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,6 +6,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v4
     - name: Install SSH Key
       uses: shimataro/ssh-key-action@v2
       with:
