--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -17,7 +17,7 @@ jobs:
       run: ssh-keyscan -p ${{ secrets.SSH_PORT }} -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
     - name: Deploy with rsync
-      run: rsync -avz -e "ssh -p ${{ secrets.SSH_PORT }}" --exclude 'frontend/src/settings' --delete ./ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/root/Github/movie-system/
+      run: rsync -avz -e "ssh -p ${{ secrets.SSH_PORT }}" --exclude 'frontend/src/settings'  ./ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/root/Github/movie-system/
 
     - name: executing remote ssh commands using key
       uses: appleboy/ssh-action@v1.0.0
