--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/trentzhang/movie-system-backend#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
